# duckdb-encodings

./: CMakeLists.txt  Makefile  README.md  cmakelists.patch  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
data/: test_5601.csv  test_CP1253.csv  test_CP1258.csv  test_EBCDIC_DK_NO.csv  test_EBCDIC_IS_FRISS.csv  test_EUC_CN.csv  test_EUC_TW.csv  test_GREEK7.csv  test_GREEK_CCITT.csv  test_IBM423.csv  test_IBM851.csv  test_IBM870.csv  test_IBM904.csv  test_IBM905.csv  test_IBM_943.csv  test_IBM_eucJP.csv  test_IBM_udcJP_GR.csv  test_INIS.csv  test_INIS_CYRILLIC.csv  test_ISO8859_8.csv  test_ISO_5427_EXT.csv  test_ISO_8859_13.csv  test_ISO_8859_7.csv  test_JISX0208.1983_0.csv  test_KOI_8.csv  test_PCK.csv  test_TIS_620.csv  test_aix-IBM_udcJP-4.3.6.csv  test_ansi_x3.110.csv  test_asmo_449.csv  test_big5.csv  test_cns-11643-1992.csv  test_cns11643.1986_1.csv  test_cns11643.1986_2.csv  test_cp037.csv  test_cp1026.csv  test_cp1250.csv  test_cp1254.csv  test_cp1255.csv  test_cp273.csv  (+321 more)
data/shift_jis/: frequency.csv  sample.csv
scripts/: converter.py  generate_icu_map.py
src/: encodings_extension.cpp  generated_encoded_functions.cpp
src/include/: encodings_extension.hpp  generated_encoded_function.hpp
test/sql/: encodings.test  shift_jis.test
