cmake_minimum_required(VERSION 3.5)

# Set extension name here
set(TARGET_NAME encodings)

set(EXTENSION_NAME ${TARGET_NAME}_extension)
set(LOADABLE_EXTENSION_NAME ${TARGET_NAME}_loadable_extension)

project(${TARGET_NAME})
include_directories(src/include)

set(EXTENSION_SOURCES src/encodings_extension.cpp
    src/generated_encoded_functions.cpp
    src/generated/ibm-1285_p100-1996_map.cpp
    src/generated/cp852_map.cpp
    src/generated/ibm-62383_p100-2007_map.cpp
    src/generated/ibm-939_x120-1999_map.cpp
    src/generated/ibm-4945_p101-2000_map.cpp
    src/generated/iso_5427_map.cpp
    src/generated/hpux-cp1257-11.11_map.cpp
    src/generated/iso_8859_6_map.cpp
    src/generated/java-cp737-1.3_p_map.cpp
    src/generated/ibm-932_p12a_p12a-2000_u2_map.cpp
    src/generated/roma8_map.cpp
    src/generated/java-cp860-1.3_p_map.cpp
    src/generated/aix-ibm_udcjp-4.3.6_map.cpp
    src/generated/macos-1282-10.2_map.cpp
    src/generated/ibm-856_p100-1995_map.cpp
    src/generated/macos-1283-10.2_map.cpp
    src/generated/ibm-1014_p100-1995_map.cpp
    src/generated/ibm-1130_p100-1997_map.cpp
    src/generated/ibm-928_p100-1995_map.cpp
    src/generated/ebcdic_it_map.cpp
    src/generated/ibm-5470_p100-2005_map.cpp
    src/generated/java-cp874-1.3_p_map.cpp
    src/generated/windows-864-2000_map.cpp
    src/generated/java-cp273-1.3_p_map.cpp
    src/generated/hpux-cp1149-11.11_map.cpp
    src/generated/windows-865-2000_map.cpp
    src/generated/ibm-950_p110-1999_map.cpp
    src/generated/windows-708-2000_map.cpp
    src/generated/inis_8_map.cpp
    src/generated/hp_roman8_map.cpp
    src/generated/glibc-nf_z_62_010_1973-2.3.3_map.cpp
    src/generated/java-cp948-1.3_p_map.cpp
    src/generated/ibm-13124_p100-1995_map.cpp
    src/generated/macos-7_1-10.2_map.cpp
    src/generated/ibm-1021_p100-2003_map.cpp
    src/generated/ibm-8612_p100-1995_map.cpp
    src/generated/glibc-gb_1988_80-2.3.3_map.cpp
    src/generated/glibc-ibm1161-2.3.3_map.cpp
    src/generated/8859_5_map.cpp
    src/generated/ibm-1010_p100-1995_map.cpp
    src/generated/java-cp1006-1.3_p_map.cpp
    src/generated/java-cp855-1.3_p_map.cpp
    src/generated/ibm-970_p110_p110-2006_u2_map.cpp
    src/generated/ibm-1098_x100-1995_map.cpp
    src/generated/ibm-4956_p101-2000_map.cpp
    src/generated/macos-1049-10.2_map.cpp
    src/generated/ibm-17248_x110-1999_map.cpp
    src/generated/ibm-5210_p100-1999_map.cpp
    src/generated/ibm-8482_p100-1999_map.cpp
    src/generated/ibm-9066_p100-1995_map.cpp
    src/generated/ibm-4971_p100-1999_map.cpp
    src/generated/ibm-1166_p100-2002_map.cpp
    src/generated/ibm-1281_p100-1996_map.cpp
    src/generated/ibm-915_p100-1995_map.cpp
    src/generated/ibm-1399_p110-2003_map.cpp
    src/generated/ibm-1374_p100-2005_map.cpp
    src/generated/windows-10079-2000_map.cpp
    src/generated/ibm-1275_p100-1995_map.cpp
    src/generated/macos-2566-10.2_map.cpp
    src/generated/ibm274_map.cpp
    src/generated/glibc-euc_jp-2.3.3_map.cpp
    src/generated/windows-737-2000_map.cpp
    src/generated/hpux-sjis0201-11.11_map.cpp
    src/generated/ibm-1122_p100-1999_map.cpp
    src/generated/windows-20108-2000_map.cpp
    src/generated/ibm-5353_p100-1998_map.cpp
    src/generated/iso8859_1_map.cpp
    src/generated/ibm-931_p120-1999_map.cpp
    src/generated/glibc-koi8_u-2.3.3_map.cpp
    src/generated/ibm-17240_p101-2000_map.cpp
    src/generated/mac_roman_map.cpp
    src/generated/ibm038_map.cpp
    src/generated/iso89_map.cpp
    src/generated/iso88_map.cpp
    src/generated/euc_kr_map.cpp
    src/generated/ibm-955_p110-1997_map.cpp
    src/generated/windows-20000-2000_map.cpp
    src/generated/windows-20001-2000_map.cpp
    src/generated/windows-10005-2000_map.cpp
    src/generated/ibm-1363_p10b-1998_map.cpp
    src/generated/windows-10004-2000_map.cpp
    src/generated/ibm-1399_p100-1999_map.cpp
    src/generated/ibm-942_p12a_p12a-2000_u2_map.cpp
    src/generated/ibm-9049_p100-1999_map.cpp
    src/generated/ibm-1123_p100-1995_map.cpp
    src/generated/ibm-1256_p110-1997_map.cpp
    src/generated/glibc-bs_4730-2.3.3_map.cpp
    src/generated/macos-1288-10.2_map.cpp
    src/generated/ibm-1101_p100-2003_map.cpp
    src/generated/ibm-878_p100-1996_map.cpp
    src/generated/ibm-5050_p120-1999_map.cpp
    src/generated/hpux-cp1144-11.11_map.cpp
    src/generated/ibm-1156_p100-1999_map.cpp
    src/generated/ibm-937_p110-1999_map.cpp
    src/generated/java-cp424-1.3_p_map.cpp
    src/generated/hpux-cp866-11.11_map.cpp
    src/generated/ibm-1126_p100_p100-1997_u3_map.cpp
    src/generated/ibm285_map.cpp
    src/generated/ibm-1383_p110-1999_map.cpp
    src/generated/hpux-big5-11.11_map.cpp
    src/generated/windows-20420-2000_map.cpp
    src/generated/ibm-1140_p100-1997_map.cpp
    src/generated/ebcdic_es_a_map.cpp
    src/generated/ibm-835_p100-1995_map.cpp
    src/generated/iso82_map.cpp
    src/generated/ibm-5067_p100-1995_map.cpp
    src/generated/java-iso8859_2-1.3_p_map.cpp
    src/generated/java-cp775-1.3_p_map.cpp
    src/generated/eucth_map.cpp
    src/generated/ibm-278_p100-1999_map.cpp
    src/generated/glibc-jis_c6229_1984_b-2.3.3_map.cpp
    src/generated/windows-850-2000_map.cpp
    src/generated/ibm-947_x100-1995_map.cpp
    src/generated/ebcdic_ca_fr_map.cpp
    src/generated/glibc-pt154-2.3.3_map.cpp
    src/generated/ibm-1375_p100-2008_map.cpp
    src/generated/cp437_map.cpp
    src/generated/java-cp964-1.3_p_map.cpp
    src/generated/ibm-941_p130-2001_map.cpp
    src/generated/ibm_943_map.cpp
    src/generated/java-cp1253-1.3_p_map.cpp
    src/generated/koi8_u_map.cpp
    src/generated/ibm-1144_p100-1997_map.cpp
    src/generated/ibm-1386_p110-1997_map.cpp
    src/generated/ibm-28709_p100-1995_map.cpp
    src/generated/ibm-1373_p100-2002_map.cpp
    src/generated/java-cp1123-1.3_p_map.cpp
    src/generated/java-cp970-1.3_p_map.cpp
    src/generated/glibc-macintosh-2.3.3_map.cpp
    src/generated/java-big5-1.3_p_map.cpp
    src/generated/ibm423_map.cpp
    src/generated/macos-38_1-10.2_map.cpp
    src/generated/euc_jp_map.cpp
    src/generated/ibm-5012_p100-1999_map.cpp
    src/generated/windows-775-2000_map.cpp
    src/generated/ibm-933_p110-1999_map.cpp
    src/generated/cp1252_map.cpp
    src/generated/iso-8859_10-1998_map.cpp
    src/generated/ibm-1105_p100-2003_map.cpp
    src/generated/ibm-5487_p100-2001_map.cpp
    src/generated/ibm-5049_p100-1995_map.cpp
    src/generated/windows-28591-2000_map.cpp
    src/generated/ibm-53685_p101-2000_map.cpp
    src/generated/ibm-33058_p100-2000_map.cpp
    src/generated/glibc-euc_kr-2.3.3_map.cpp
    src/generated/cp861_map.cpp
    src/generated/glibc-uhc-2.3.3_map.cpp
    src/generated/ibm_932_map.cpp
    src/generated/glibc-mac_sami-2.3.3_map.cpp
    src/generated/java-cp949c-1.3_p_map.cpp
    src/generated/java-iso8859_9-1.3_p_map.cpp
    src/generated/cp500_map.cpp
    src/generated/ebcdic_fi_se_map.cpp
    src/generated/windows-1140-2000_map.cpp
    src/generated/iso_8859_14_map.cpp
    src/generated/ibm-1143_p100-1997_map.cpp
    src/generated/windows-1141-2000_map.cpp
    src/generated/iso8859_7_map.cpp
    src/generated/ibm-301_x110-1997_map.cpp
    src/generated/ibm-850_p100-1999_map.cpp
    src/generated/windows-932-2000_map.cpp
    src/generated/glibc-ibm866nav-2.3.3_map.cpp
    src/generated/ibm-941_p12a-1996_map.cpp
    src/generated/ibm-1155_p100-1999_map.cpp
    src/generated/hpux-cp775-11.11_map.cpp
    src/generated/ibm875_map.cpp
    src/generated/ibm-1258_p100-1997_map.cpp
    src/generated/ibm-1165_p101-2000_map.cpp
    src/generated/ibm-5473_p100-2006_map.cpp
    src/generated/java-cp1258-1.3_p_map.cpp
    src/generated/ibm-1102_p100-2003_map.cpp
    src/generated/windows-20936-2000_map.cpp
    src/generated/latin_greek_map.cpp
    src/generated/ibm-943_p15a-2003_map.cpp
    src/generated/ibm-1377_p100-2006_map.cpp
    src/generated/ibm-286_p100-2003_map.cpp
    src/generated/ibm-425_p101-2000_map.cpp
    src/generated/ibm-954_p101-2007_map.cpp
    src/generated/ibm-971_p100-1995_map.cpp
    src/generated/ibm-367_p100-1995_map.cpp
    src/generated/ibm-944_x100-1995_map.cpp
    src/generated/java-cp866-1.3_p_map.cpp
    src/generated/windows-1258-2000_map.cpp
    src/generated/glibc-gbk-2.3.3_map.cpp
    src/generated/windows-720-2000_map.cpp
    src/generated/hpux-cp1251-11.11_map.cpp
    src/generated/ibm-836_p100-1995_map.cpp
    src/generated/macos-514-10.2_map.cpp
    src/generated/ibm-300_p120-2006_map.cpp
    src/generated/macos-515-10.2_map.cpp
    src/generated/iso-8859_3-1999_map.cpp
    src/generated/iso-8859_2-1999_map.cpp
    src/generated/ibm-1106_p100-2003_map.cpp
    src/generated/ebcdic_us_map.cpp
    src/generated/ibm-4960_p100-1995_map.cpp
    src/generated/ibm-942_p120-1999_map.cpp
    src/generated/ibm-864_x120-2012_map.cpp
    src/generated/iso-8859_7-1987_map.cpp
    src/generated/ibm-5478_p100-1995_map.cpp
    src/generated/java-ascii-1.3_p_map.cpp
    src/generated/ibm-1364_p100-2007_map.cpp
    src/generated/ibm-1147_p100-1997_map.cpp
    src/generated/ibm-855_p100-1995_map.cpp
    src/generated/ibm-905_p100-1995_map.cpp
    src/generated/ibm-948_x110-1999_map.cpp
    src/generated/iso-8859_16-2001_map.cpp
    src/generated/ibm-1017_p100-1995_map.cpp
    src/generated/glibc-nc_nc00_10-2.3.3_map.cpp
    src/generated/ibm-1363_p110-1999_map.cpp
    src/generated/glibc-georgian_ps-2.3.3_map.cpp
    src/generated/ibm-943_p14a-1999_map.cpp
    src/generated/ibm-819_p100-1999_map.cpp
    src/generated/ibm-13162_p101-2000_map.cpp
    src/generated/ibm-9306_p101-2000_map.cpp
    src/generated/java-iso8859_4-1.3_p_map.cpp
    src/generated/ibm-927_x100-1995_map.cpp
    src/generated/macos-520-10.2_map.cpp
    src/generated/macos-6_2-10.4_map.cpp
    src/generated/macos-521-10.2_map.cpp
    src/generated/ibm-5233_p100-2011_map.cpp
    src/generated/java-cp918-1.3_p_map.cpp
    src/generated/cp949_map.cpp
    src/generated/java-cp284-1.3_p_map.cpp
    src/generated/windows-51949-2000_map.cpp
    src/generated/java-koi8_r-1.3_p_map.cpp
    src/generated/cp1254_map.cpp
    src/generated/ibm-1388_p103-2001_map.cpp
    src/generated/ibm-9005_x100-2005_map.cpp
    src/generated/ibm-33722_p12a_p12a-2004_u2_map.cpp
    src/generated/windows-10081-2000_map.cpp
    src/generated/ebcdic_uk_map.cpp
    src/generated/ibm-5354_p100-1998_map.cpp
    src/generated/greek7_old_map.cpp
    src/generated/ibm-1363_p11c-2006_map.cpp
    src/generated/java-cp1255-1.3_p_map.cpp
    src/generated/hpux-cp855-11.11_map.cpp
    src/generated/ibm-952_p110-1997_map.cpp
    src/generated/ibm-1133_p100-1997_map.cpp
    src/generated/ibm-916_p100-1995_map.cpp
    src/generated/ibm-1282_p100-1996_map.cpp
    src/generated/ibm-1004_p100-1995_map.cpp
    src/generated/java-cp1381-1.3_p_map.cpp
    src/generated/ibm-1132_p100-1998_map.cpp
    src/generated/ibm-1380_x100-1995_map.cpp
    src/generated/java-euc_tw-1.3_p_map.cpp
    src/generated/ibm-4955_p101-2000_map.cpp
    src/generated/8859_4_map.cpp
    src/generated/ibm297_map.cpp
    src/generated/hpux-cp874-11.11_map.cpp
    src/generated/ibm-1371_x100-1999_map.cpp
    src/generated/ibm-851_p100-1995_map.cpp
    src/generated/iso-8859_9-1999_map.cpp
    src/generated/iso-8859_8-1999_map.cpp
    src/generated/ibm-1013_p100-1995_map.cpp
    src/generated/hpux-cp860-11.11_map.cpp
    src/generated/tis_620_map.cpp
    src/generated/ibm-1008_x100-1995_map.cpp
    src/generated/windows-1253-2000_map.cpp
    src/generated/windows-1252-2000_map.cpp
    src/generated/ibm_1046_map.cpp
    src/generated/ibm-932_p120-1999_map.cpp
    src/generated/dec_mcs_map.cpp
    src/generated/ibm-5347_p100-1998_map.cpp
    src/generated/java-tis620-1.3_p_map.cpp
    src/generated/ibm-5350_p100-1998_map.cpp
    src/generated/hpux-cp737-11.11_map.cpp
    src/generated/ibm-4517_p100-2005_map.cpp
    src/generated/ibm_euctw_map.cpp
    src/generated/ibm_858_map.cpp
    src/generated/cns-11643-1992_map.cpp
    src/generated/ibm-868_p100-1995_map.cpp
    src/generated/java-cp939-1.3_p_map.cpp
    src/generated/ibm-953_p100-2000_map.cpp
    src/generated/java-cp278-1.3_p_map.cpp
    src/generated/hpux-cp1142-11.11_map.cpp
    src/generated/ibm-1276_p100-1995_map.cpp
    src/generated/ibm-1097_p100-1995_map.cpp
    src/generated/hpux-greee-11.11_map.cpp
    src/generated/ibm-1019_p100-1995_map.cpp
    src/generated/java-cp875-1.3_p_map.cpp
    src/generated/ibm-960_p100-2000_map.cpp
    src/generated/windows-874-2000_map.cpp
    src/generated/java-cp1026-1.3_p_map.cpp
    src/generated/hpux-cp1148-11.11_map.cpp
    src/generated/windows-875-2000_map.cpp
    src/generated/java-cp933-1.3_p_map.cpp
    src/generated/glibc-cp932-2.3.3_map.cpp
    src/generated/glibc-ksc5636-2.3.3_map.cpp
    src/generated/windows-20127-2000_map.cpp
    src/generated/iso-8859_4-1998_map.cpp
    src/generated/ibm-1363_p10a-1997_map.cpp
    src/generated/java-cp949-1.3_p_map.cpp
    src/generated/ibm-964_p110-1999_map.cpp
    src/generated/windows-28596-2000_map.cpp
    src/generated/windows-28597-2000_map.cpp
    src/generated/windows-20871-2000_map.cpp
    src/generated/ibm-1375_x100-2004_map.cpp
    src/generated/ibm-5348_p100-1997_map.cpp
    src/generated/glibc-es-2.3.3_map.cpp
    src/generated/ibm-423_p100-1995_map.cpp
    src/generated/ibm-1390_p110-2003_map.cpp
    src/generated/hpux-cp437-11.11_map.cpp
    src/generated/ibm-941_x11a-1996_map.cpp
    src/generated/macos-6-10.2_map.cpp
    src/generated/ibm-862_p100-1995_map.cpp
    src/generated/iso_8859_7_map.cpp
    src/generated/java-cp500-1.3_p_map.cpp
    src/generated/big5_map.cpp
    src/generated/hpux-cp1256-11.11_map.cpp
    src/generated/glibc-isiri_3342-2.3.3_map.cpp
    src/generated/windows-1147-2000_map.cpp
    src/generated/ibm-9056_p100-1995_map.cpp
    src/generated/windows-1146-2000_map.cpp
    src/generated/ibm-285_p100-1999_map.cpp
    src/generated/ibm-875_p100-1995_map.cpp
    src/generated/windows-20838-2000_map.cpp
    src/generated/java-cp861-1.3_p_map.cpp
    src/generated/ibm-918_p100-1995_map.cpp
    src/generated/ibm-930_x120-1999_map.cpp
    src/generated/ibm275_map.cpp
    src/generated/ibm-837_p100-2011_map.cpp
    src/generated/glibc-ibm943-2.3.3_map.cpp
    src/generated/ibm-1051_p100-1999_map.cpp
    src/generated/java-cp943c-1.3_p_map.cpp
    src/generated/gost_19768_74_map.cpp
    src/generated/iso_8859_13_map.cpp
    src/generated/windows-10021-2000_map.cpp
    src/generated/zh_cn.gbk_map.cpp
    src/generated/glibc-koi8_t-2.3.3_map.cpp
    src/generated/ibm-9027_p100-1999_map.cpp
    src/generated/windows-20277-2000_map.cpp
    src/generated/glibc-pt2-2.3.3_map.cpp
    src/generated/ibm-775_p100-1996_map.cpp
    src/generated/glibc-ibm1160-2.3.3_map.cpp
    src/generated/ibm-1382_p100-1995_map.cpp
    src/generated/ibm-921_p100-1995_map.cpp
    src/generated/ibm-1006_x100-1995_map.cpp
    src/generated/ibm-5349_p100-1998_map.cpp
    src/generated/hpux-sjisms-11.11_map.cpp
    src/generated/macos-1059-10.2_map.cpp
    src/generated/macos-513-10.2_map.cpp
    src/generated/hpux-iso87-11.11_map.cpp
    src/generated/ibm-4962_p101-2000_map.cpp
    src/generated/glibc-big5-2.3.3_map.cpp
    src/generated/iso-8859_5-1999_map.cpp
    src/generated/cp866_map.cpp
    src/generated/ibm-1351_p110-1997_map.cpp
    src/generated/ibm-866_p100-1995_map.cpp
    src/generated/cp775_map.cpp
    src/generated/glibc-cp10007-2.3.3_map.cpp
    src/generated/glibc-viscii-2.3.3_map.cpp
    src/generated/windows-20833-2000_map.cpp
    src/generated/macos-527-10.2_map.cpp
    src/generated/ibm-9044_p100-1999_map.cpp
    src/generated/hpux-cp1145-11.11_map.cpp
    src/generated/ibm-870_p100-1999_map.cpp
    src/generated/iso-8859_11-2001_map.cpp
    src/generated/ibm-1162_p100-1999_map.cpp
    src/generated/ibm284_map.cpp
    src/generated/ibm-896_p100-1995_map.cpp
    src/generated/java-cp1098-1.3_p_map.cpp
    src/generated/ebcdic_is_friss_map.cpp
    src/generated/java-cp950-1.3_p_map.cpp
    src/generated/glibc-din_66003-2.3.3_map.cpp
    src/generated/iso815_map.cpp
    src/generated/ibm-1047_p100-1995_map.cpp
    src/generated/ibm290_map.cpp
    src/generated/ibm-4930_p100-1997_map.cpp
    src/generated/ibm-1137_pmod-1999_map.cpp
    src/generated/ibm918_map.cpp
    src/generated/hpux-eucjpms-11.11_map.cpp
    src/generated/gb18030_map.cpp
    src/generated/glibc-es2-2.3.3_map.cpp
    src/generated/ibm-924_p100-1998_map.cpp
    src/generated/ibm-849_p100-1999_map.cpp
    src/generated/macos-36_2-10.2_map.cpp
    src/generated/macos-1024-10.2_map.cpp
    src/generated/glibc-iso_8859_7-2.3.3_map.cpp
    src/generated/cp737_map.cpp
    src/generated/8859_15_map.cpp
    src/generated/glibc-iso_8859_13-2.3.3_map.cpp
    src/generated/java-euc_jp-1.3_p_map.cpp
    src/generated/java-cp1122-1.3_p_map.cpp
    src/generated/ibm-16804_x110-1999_map.cpp
    src/generated/java-cp1252-1.3_p_map.cpp
    src/generated/ibm-5039_p110-1996_map.cpp
    src/generated/hpux-cp852-11.11_map.cpp
    src/generated/macos-519-10.2_map.cpp
    src/generated/macos-518-10.2_map.cpp
    src/generated/ibm278_map.cpp
    src/generated/ibm-1390_p100-1999_map.cpp
    src/generated/cp1253_map.cpp
    src/generated/ibm-13218_p100-1996_map.cpp
    src/generated/windows-20905-2000_map.cpp
    src/generated/ibm-838_p100-1995_map.cpp
    src/generated/ibm-293_p100-1995_map.cpp
    src/generated/ibm-1363_p11b-1999_map.cpp
    src/generated/java-iso8859_3-1.3_p_map.cpp
    src/generated/ibm-946_p100-1995_map.cpp
    src/generated/ibm_eucjp_map.cpp
    src/generated/windows-949-2000_map.cpp
    src/generated/java-cp297-1.3_p_map.cpp
    src/generated/cp1026_map.cpp
    src/generated/ibm-867_p100-1998_map.cpp
    src/generated/ibm-834_x100-1995_map.cpp
    src/generated/windows-1254-2000_map.cpp
    src/generated/ibm-951_p100-1995_map.cpp
    src/generated/windows-21027-2000_map.cpp
    src/generated/windows-1255-2000_map.cpp
    src/generated/ibm-1043_p100-1995_map.cpp
    src/generated/8859_6_map.cpp
    src/generated/ibm-1149_p100-1997_map.cpp
    src/generated/iso8859_6_map.cpp
    src/generated/ascii_map.cpp
    src/generated/ibm-935_x110-1999_map.cpp
    src/generated/glibc-koi8_r-2.3.3_map.cpp
    src/generated/ibm-913_p100-2000_map.cpp
    src/generated/ibm-895_p100-1995_map.cpp
    src/generated/iso_8859_15_map.cpp
    src/generated/cp1258_map.cpp
    src/generated/macos-1285-10.2_map.cpp
    src/generated/ebcdic_at_de_map.cpp
    src/generated/ibm-1161_p100-1999_map.cpp
    src/generated/macos-1284-10.2_map.cpp
    src/generated/cp273_map.cpp
    src/generated/ibm874_map.cpp
    src/generated/glibc-cp1125-2.3.3_map.cpp
    src/generated/windows-20284-2000_map.cpp
    src/generated/windows-20285-2000_map.cpp
    src/generated/ibm-1381_x110-1999_map.cpp
    src/generated/ibm-300_p110-1997_map.cpp
    src/generated/glibc-csa_z243.4_1985_1-2.3.3_map.cpp
    src/generated/windows-20866-2000_map.cpp
    src/generated/solaris-zh_tw_big5-2.7_map.cpp
    src/generated/ibm-1158_p100-1999_map.cpp
    src/generated/windows-10008-2000_map.cpp
    src/generated/cp860_map.cpp
    src/generated/macos-21-10.5_map.cpp
    src/generated/glibc-ns_4551_2-2.3.3_map.cpp
    src/generated/windows-863-2000_map.cpp
    src/generated/windows-862-2000_map.cpp
    src/generated/java-cp852-1.3_p_map.cpp
    src/generated/java-iso8859_8-1.3_p_map.cpp
    src/generated/ibm-21427_x100-1999_map.cpp
    src/generated/ibm-1114_p100-1995_map.cpp
    src/generated/ibm-290_p100-1995_map.cpp
    src/generated/ibm-33722_p12a-1999_map.cpp
    src/generated/glibc-ecma_cyrillic-2.3.3_map.cpp
    src/generated/ibm-4933_p100-1996_map.cpp
    src/generated/java-cp935-1.3_p_map.cpp
    src/generated/ibm-9064_p101-2000_map.cpp
    src/generated/ibm-891_p100-1995_map.cpp
    src/generated/ibm-1364_p110-2007_map.cpp
    src/generated/ibm-1385_p100-1997_map.cpp
    src/generated/ibm-858_p100-1997_map.cpp
    src/generated/osd-ebcdic-df04-15_map.cpp
    src/generated/ibm-420_x110-1999_map.cpp
    src/generated/ibm-5039_p11a-1998_map.cpp
    src/generated/ibm-1040_p100-1995_map.cpp
    src/generated/ibm-20780_p100-1999_map.cpp
    src/generated/ibm-859_p100-1999_map.cpp
    src/generated/ibm-837_x100-1995_map.cpp
    src/generated/windows-51932-2006_map.cpp
    src/generated/8859_7_map.cpp
    src/generated/windows-20261-2000_map.cpp
    src/generated/java-cp921-1.3_p_map.cpp
    src/generated/ibm-1250_p100-1999_map.cpp
    src/generated/cp855_map.cpp
    src/generated/ibm-923_p100-1998_map.cpp
    src/generated/glibc-ibm1129-2.3.3_map.cpp
    src/generated/hpux-cp1250-11.11_map.cpp
    src/generated/ibm-9005_x110-2007_map.cpp
    src/generated/iso_8859_1_map.cpp
    src/generated/glibc-ibm874-2.3.3_map.cpp
    src/generated/jisx0201.1976_gr_map.cpp
    src/generated/ibm-5035_x120-1999_map.cpp
    src/generated/nats_dano_map.cpp
    src/generated/java-cp285-1.3_p_map.cpp
    src/generated/ibm-259_p100-1995_map.cpp
    src/generated/ebcdic_fr_map.cpp
    src/generated/cp1255_map.cpp
    src/generated/ibm-1251_p100-1995_map.cpp
    src/generated/windows-869-2000_map.cpp
    src/generated/ibm_euckr_map.cpp
    src/generated/ibm-9145_p110-1997_map.cpp
    src/generated/koi8_r_map.cpp
    src/generated/java-iso8859_13-1.3_p_map.cpp
    src/generated/java-cp1254-1.3_p_map.cpp
    src/generated/ibm-970_p110-1999_map.cpp
    src/generated/ibm-803_p100-1999_map.cpp
    src/generated/windows-10002-2000_map.cpp
    src/generated/windows-10003-2000_map.cpp
    src/generated/java-cp1124-1.3_p_map.cpp
    src/generated/ebcdic_es_s_map.cpp
    src/generated/cp424_map.cpp
    src/generated/ibm-437_p100-1995_map.cpp
    src/generated/ibm-1089_p100-1995_map.cpp
    src/generated/macos-2817-10.2_map.cpp
    src/generated/ibm-1362_p100-1997_map.cpp
    src/generated/java-euc_kr-1.3_p_map.cpp
    src/generated/ibm-13156_p101-2000_map.cpp
    src/generated/ibm-1174_x100-2007_map.cpp
    src/generated/ebcdic_pt_map.cpp
    src/generated/ibm-949_p110-1999_map.cpp
    src/generated/ibm-12712_p100-1998_map.cpp
    src/generated/java-iso8859_5-1.3_p_map.cpp
    src/generated/ibm-861_p100-1995_map.cpp
    src/generated/macos-3074-10.2_map.cpp
    src/generated/ibm-1129_p100-1997_map.cpp
    src/generated/hpux-cp861-11.11_map.cpp
    src/generated/windows-857-2000_map.cpp
    src/generated/ibm-5026_x120-1999_map.cpp
    src/generated/windows-20105-2000_map.cpp
    src/generated/iso_10367_box_map.cpp
    src/generated/java-cp942-1.3_p_map.cpp
    src/generated/windows-28603-vista_map.cpp
    src/generated/ibm-4958_p101-2000_map.cpp
    src/generated/iso85_map.cpp
    src/generated/macos-0_1-10.2_map.cpp
    src/generated/zh_cn.euc_map.cpp
    src/generated/ibm-1388_p100-2024_map.cpp
    src/generated/ibm-5104_x110-1999_map.cpp
    src/generated/ibm-1168_p100-2002_map.cpp
    src/generated/hpux-cp1143-11.11_map.cpp
    src/generated/ibm-1255_p100-1995_map.cpp
    src/generated/ibm-424_p100-1995_map.cpp
    src/generated/ibm-1009_p100-1995_map.cpp
    src/generated/java-cp437-1.3_p_map.cpp
    src/generated/euc_tw_map.cpp
    src/generated/hpux-hp15cn-11.11_map.cpp
    src/generated/ibm-1027_p100-1995_map.cpp
    src/generated/ibm-865_p100-1995_map.cpp
    src/generated/ibm-13145_p101-2000_map.cpp
    src/generated/ibm-1370_p100-1999_map.cpp
    src/generated/ibm-4961_p101-2000_map.cpp
    src/generated/glibc-ibm1124-2.3.3_map.cpp
    src/generated/cns11643.1986_1_map.cpp
    src/generated/nats_sefi_map.cpp
    src/generated/ibm891_map.cpp
    src/generated/ibm-9444_p100-2001_map.cpp
    src/generated/glibc-ibm1163-2.3.3_map.cpp
    src/generated/ibm-5488_p100-2001_map.cpp
    src/generated/ibm-944_p100-1995_map.cpp
    src/generated/hpux-eucjp-11.11_map.cpp
    src/generated/java-cp857-1.3_p_map.cpp
    src/generated/windows-1149-2000_map.cpp
    src/generated/windows-1148-2000_map.cpp
    src/generated/ibm-1041_p100-1995_map.cpp
    src/generated/cp865_map.cpp
    src/generated/ibm-13676_p102-2001_map.cpp
    src/generated/java-cp33722-1.3_p_map.cpp
    src/generated/ibm-943_p130-1999_map.cpp
    src/generated/windows-10082-2000_map.cpp
    src/generated/ibm-1164_p100-1999_map.cpp
    src/generated/iec_p27_1_map.cpp
    src/generated/glibc-jis_c6220_1969_ro-2.3.3_map.cpp
    src/generated/ibm871_map.cpp
    src/generated/windows-28598-2000_map.cpp
    src/generated/ibm-4960_x100-1995_map.cpp
    src/generated/windows-28599-2000_map.cpp
    src/generated/ebcdic_dk_no_map.cpp
    src/generated/iso8859_3_map.cpp
    src/generated/windows-10010-2000_map.cpp
    src/generated/ibm-277_p100-1999_map.cpp
    src/generated/iso_8859_10_map.cpp
    src/generated/hpux-cp1255-11.11_map.cpp
    src/generated/iso_8859_4_map.cpp
    src/generated/cp850_map.cpp
    src/generated/ibm-1115_p100-1995_map.cpp
    src/generated/macos-1057-10.2_map.cpp
    src/generated/java-cp862-1.3_p_map.cpp
    src/generated/glibc-iso_5428-2.3.3_map.cpp
    src/generated/ibm-1159_p100-1999_map.cpp
    src/generated/ibm-273_p100-1999_map.cpp
    src/generated/windows-1250-2000_map.cpp
    src/generated/ibm-4951_p100-1995_map.cpp
    src/generated/windows-1251-2000_map.cpp
    src/generated/ibm-301_p110-1997_map.cpp
    src/generated/java-cp930-1.3_p_map.cpp
    src/generated/osd-ebcdic-df04-1_map.cpp
    src/generated/windows-37-2000_map.cpp
    src/generated/java-cp1025-1.3_p_map.cpp
    src/generated/windows-20949-2000_map.cpp
    src/generated/ibm-282_p100-1995_map.cpp
    src/generated/ibm-864_x110-1999_map.cpp
    src/generated/hpux-cp869-11.11_map.cpp
    src/generated/ibm-872_p100-1999_map.cpp
    src/generated/windows-20278-2000_map.cpp
    src/generated/ibm-922_p100-1999_map.cpp
    src/generated/ibm-1160_p100-1999_map.cpp
    src/generated/euc-jp-2007_map.cpp
    src/generated/macos-37_5-10.2_map.cpp
    src/generated/glibc-t.61_8bit-2.3.3_map.cpp
    src/generated/macos-37_4-10.2_map.cpp
    src/generated/windows-28592-2000_map.cpp
    src/generated/windows-28593-2000_map.cpp
    src/generated/ibm-1380_p100-1995_map.cpp
    src/generated/ibm-1026_p100-1995_map.cpp
    src/generated/iso-8859_1-1998_map.cpp
    src/generated/iso8859_15_map.cpp
    src/generated/windows-870-2000_map.cpp
    src/generated/ibm868_map.cpp
    src/generated/ibm-1371_p100-1999_map.cpp
    src/generated/ibm-500_p100-1999_map.cpp
    src/generated/ibm-1124_x100-1996_map.cpp
    src/generated/macos-33-10.5_map.cpp
    src/generated/8859_2_map.cpp
    src/generated/windows-1143-2000_map.cpp
    src/generated/glibc-ibm1046-2.3.3_map.cpp
    src/generated/ibm-1008_p100-1995_map.cpp
    src/generated/java-cp1251-1.3_p_map.cpp
    src/generated/windows-1142-2000_map.cpp
    src/generated/pck_map.cpp
    src/generated/ibm-1254_p100-1995_map.cpp
    src/generated/cp037_map.cpp
    src/generated/glibc-georgian_academy-2.3.3_map.cpp
    src/generated/macos-1536-10.2_map.cpp
    src/generated/ibm-868_x100-1995_map.cpp
    src/generated/windows-20297-2000_map.cpp
    src/generated/java-cp280-1.3_p_map.cpp
    src/generated/cp1250_map.cpp
    src/generated/ibm-4959_p101-2000_map.cpp
    src/generated/ibm-1097_x100-1995_map.cpp
    src/generated/ibm-948_p110-1999_map.cpp
    src/generated/ibm-13140_p101-2000_map.cpp
    src/generated/windows-20273-2000_map.cpp
    src/generated/zh_cn_cp935_map.cpp
    src/generated/ibm-941_x110-1996_map.cpp
    src/generated/ibm-930_p120_p12a-2006_u2_map.cpp
    src/generated/ibm-806_p100-1998_map.cpp
    src/generated/mac_uk_map.cpp
    src/generated/iso_8859_9_map.cpp
    src/generated/iso_5428_map.cpp
    src/generated/asmo_449_map.cpp
    src/generated/hpux-cp1258-11.11_map.cpp
    src/generated/glibc-win_sami_2-2.3.3_map.cpp
    src/generated/ibm-860_p100-1995_map.cpp
    src/generated/ibm-1127_p100-2004_map.cpp
    src/generated/ibm-1363_p100-1997_map.cpp
    src/generated/ibm-927_p100-1995_map.cpp
    src/generated/inis_map.cpp
    src/generated/ibm-5035_p120_p12a-2005_u2_map.cpp
    src/generated/ibm-1088_p100-1995_map.cpp
    src/generated/ebcdic_at_de_a_map.cpp
    src/generated/ibm-13157_p101-2000_map.cpp
    src/generated/greek7_map.cpp
    src/generated/ibm-9577_p100-2001_map.cpp
    src/generated/hpux-cp1146-11.11_map.cpp
    src/generated/osd-ebcdic-df03-irv_map.cpp
    src/generated/macos-517-10.2_map.cpp
    src/generated/macos-516-10.2_map.cpp
    src/generated/java-iso2022kr-1.3_p_map.cpp
    src/generated/windows-51936-2000_map.cpp
    src/generated/glibc-it-2.3.3_map.cpp
    src/generated/hpux-cp864-11.11_map.cpp
    src/generated/ibm880_map.cpp
    src/generated/thai8_map.cpp
    src/generated/ibm1004_map.cpp
    src/generated/ibm-297_p100-1999_map.cpp
    src/generated/java-cp922-1.3_p_map.cpp
    src/generated/java-cp864-1.3_p_map.cpp
    src/generated/ibm-4963_p101-2000_map.cpp
    src/generated/ibm-1098_p100-1995_map.cpp
    src/generated/ibm-420_x120-1999_map.cpp
    src/generated/windows-10006-2000_map.cpp
    src/generated/ibm-1025_p100-1995_map.cpp
    src/generated/ibm-1350_p110-1997_map.cpp
    src/generated/windows-10007-2000_map.cpp
    src/generated/iso_8859_2_map.cpp
    src/generated/ibm-920_p100-1995_map.cpp
    src/generated/hpux-cp1253-11.11_map.cpp
    src/generated/iso-8859_7-2003_map.cpp
    src/generated/ibm-9447_p100-2002_map.cpp
    src/generated/ibm-280_p100-1999_map.cpp
    src/generated/ibm-1275_x100-1995_map.cpp
    src/generated/ibm904_map.cpp
    src/generated/java-sjis-1.3_p_map.cpp
    src/generated/ibm-931_x120-1999_map.cpp
    src/generated/8859_3_map.cpp
    src/generated/ibm-21344_p101-2000_map.cpp
    src/generated/ibm-1257_p100-1995_map.cpp
    src/generated/windows-20423-2000_map.cpp
    src/generated/ibm-1046_x110-1999_map.cpp
    src/generated/java-cp870-1.3_p_map.cpp
    src/generated/java-cp277-1.3_p_map.cpp
    src/generated/glibc-nf_z_62_010-2.3.3_map.cpp
    src/generated/cp863_map.cpp
    src/generated/euc_cn_map.cpp
    src/generated/ibm-284_p100-1999_map.cpp
    src/generated/ibm-939_p120-1999_map.cpp
    src/generated/iso81_map.cpp
    src/generated/ibm-33722_p12a_p12a-2009_u2_map.cpp
    src/generated/glibc-csa_z243.4_1985_2-2.3.3_map.cpp
    src/generated/ibm-874_p100-1995_map.cpp
    src/generated/ibm-863_p100-1995_map.cpp
    src/generated/5601_map.cpp
    src/generated/ibm-275_p100-1995_map.cpp
    src/generated/windows-852-2000_map.cpp
    src/generated/ibm-13143_p101-2000_map.cpp
    src/generated/glibc-ns_4551_1-2.3.3_map.cpp
    src/generated/macos-38_2-10.2_map.cpp
    src/generated/hpux-euckr-11.11_map.cpp
    src/generated/ibm-949_p11a-1999_map.cpp
    src/generated/java-johab-1.3_p_map.cpp
    src/generated/windows-38598-2000_map.cpp
    src/generated/ibm-950_x110-1999_map.cpp
    src/generated/iso8859_5_map.cpp
    src/generated/ibm-1253_p100-1995_map.cpp
    src/generated/windows-28605-2000_map.cpp
    src/generated/8859_10_map.cpp
    src/generated/iso-8859_13-1998_map.cpp
    src/generated/ibm-1018_p100-1995_map.cpp
    src/generated/hpux-sjis-11.11_map.cpp
    src/generated/macos-1040-10.2_map.cpp
    src/generated/glibc-big5hkscs-2.3.3_map.cpp
    src/generated/glibc-jus_i.b1.002-2.3.3_map.cpp
    src/generated/ibm-835_x100-1995_map.cpp
    src/generated/ibm-4904_p101-2000_map.cpp
    src/generated/java-iso2022jp-1.3_p_map.cpp
    src/generated/ibm-9444_p100_p100-2005_ms_map.cpp
    src/generated/ibm-1148_p100-1997_map.cpp
    src/generated/java-cp869-1.3_p_map.cpp
    src/generated/windows-20280-2000_map.cpp
    src/generated/ibm-1112_p100-1995_map.cpp
    src/generated/ibm-1042_p100-1995_map.cpp
    src/generated/glibc-ibm856-2.3.3_map.cpp
    src/generated/java-cp1383-1.3_p_map.cpp
    src/generated/ibm-947_p100-1995_map.cpp
    src/generated/macos-1281-10.2_map.cpp
    src/generated/cns11643.1986_2_map.cpp
    src/generated/macos-1280-10.2_map.cpp
    src/generated/ibm-33722_p120-1999_map.cpp
    src/generated/ibm-5486_p100-1999_map.cpp
    src/generated/glibc-ibm1133-2.3.3_map.cpp
    src/generated/java-cp1112-1.3_p_map.cpp
    src/generated/zh_tw_euc_map.cpp
    src/generated/hpux-cp862-11.11_map.cpp
    src/generated/windows-866-2000_map.cpp
    src/generated/ibm281_map.cpp
    src/generated/macos-7_2-10.2_map.cpp
    src/generated/ibm-939_p120_p12a-2005_u2_map.cpp
    src/generated/java-cp420-1.3_p_map.cpp
    src/generated/macos-7_3-10.2_map.cpp
    src/generated/hpux-cp1140-11.11_map.cpp
    src/generated/ibm-933_x110-1999_map.cpp
    src/generated/java-ms932-1.3_p_map.cpp
    src/generated/ibm-848_p100-1999_map.cpp
    src/generated/glibc-sen_850200_b-2.3.3_map.cpp
    src/generated/ibm-9030_p100-1995_map.cpp
    src/generated/java-ms874-1.3_p_map.cpp
    src/generated/ibm-813_p100-1995_map.cpp
    src/generated/ibm-25546_p100-1997_map.cpp
    src/generated/ibm-9580_p110-1999_map.cpp
    src/generated/glibc-euc_cn-2.3.3_map.cpp
    src/generated/ibm-9448_x100-2005_map.cpp
    src/generated/java-iso8859_6-1.3_p_map.cpp
    src/generated/ibm-5495_p100-1999_map.cpp
    src/generated/windows-858-2000_map.cpp
    src/generated/iso8859_8_map.cpp
    src/generated/ibm-871_p100-1999_map.cpp
    src/generated/iso646_us_map.cpp
    src/generated/ibm-1163_p100-1999_map.cpp
    src/generated/ibm-937_x110-1999_map.cpp
    src/generated/cp1256_map.cpp
    src/generated/ibm-897_p100-1995_map.cpp
    src/generated/ibm-880_p100-1995_map.cpp
    src/generated/hpux-cp857-11.11_map.cpp
    src/generated/ibm-4909_p100-1999_map.cpp
    src/generated/windows-950-2000_map.cpp
    src/generated/windows-20003-2000_map.cpp
    src/generated/ibm-1383_x110-1999_map.cpp
    src/generated/windows-20002-2000_map.cpp
    src/generated/glibc-iso_8859_16-2.3.3_map.cpp
    src/generated/ibm-9444_p100-2005_map.cpp
    src/generated/ibm-4952_p100-1995_map.cpp
    src/generated/java-cp1257-1.3_p_map.cpp
    src/generated/java-cp838-1.3_p_map.cpp
    src/generated/ibm-941_p13a-2001_map.cpp
    src/generated/ibm-1146_p100-1997_map.cpp
    src/generated/ibm277_map.cpp
    src/generated/ibm-737_p100-1997_map.cpp
    src/generated/ibm-9067_x100-2005_map.cpp
    src/generated/ibm870_map.cpp
    src/generated/ibm-720_p100-1997_map.cpp
    src/generated/ibm-1107_p100-2003_map.cpp
    src/generated/ibm-9061_p100-1999_map.cpp
    src/generated/iso_8859_11_map.cpp
    src/generated/iso8859_2_map.cpp
    src/generated/iso-8859_15-1999_map.cpp
    src/generated/windows-10001-2000_map.cpp
    src/generated/ibm1047_map.cpp
    src/generated/ibm-912_p100-1999_map.cpp
    src/generated/windows-10000-2000_map.cpp
    src/generated/8859_1_map.cpp
    src/generated/ibm-16684_p100-1999_map.cpp
    src/generated/windows-20424-2000_map.cpp
    src/generated/ibm-837_p100-1995_map.cpp
    src/generated/java-cp856-1.3_p_map.cpp
    src/generated/glibc-ibm1162-2.3.3_map.cpp
    src/generated/cp864_map.cpp
    src/generated/mac_is_map.cpp
    src/generated/ibm_1129_map.cpp
    src/generated/ibm-17221_p100-2001_map.cpp
    src/generated/ibm-1377_p100-2008_map.cpp
    src/generated/ibm-1154_p100-1999_map.cpp
    src/generated/ibm-935_p110-1999_map.cpp
    src/generated/windows-1026-2000_map.cpp
    src/generated/windows-855-2000_map.cpp
    src/generated/windows-20106-2000_map.cpp
    src/generated/ibm-926_p100-2000_map.cpp
    src/generated/windows-20107-2000_map.cpp
    src/generated/ibm_850_map.cpp
    src/generated/ibm-1103_p100-2003_map.cpp
    src/generated/ebcdic_dk_no_a_map.cpp
    src/generated/ibm-1142_p100-1997_map.cpp
    src/generated/ibm903_map.cpp
    src/generated/iso87_map.cpp
    src/generated/macos-0_2-10.2_map.cpp
    src/generated/ibm-9042_p101-2000_map.cpp
    src/generated/iso86_map.cpp
    src/generated/java-cp1097-1.3_p_map.cpp
    src/generated/ibm-9238_x110-1999_map.cpp
    src/generated/ibm-1381_p110-1999_map.cpp
    src/generated/ibm-300_x110-1997_map.cpp
    src/generated/windows-20269-2000_map.cpp
    src/generated/ibm-901_p100-1999_map.cpp
    src/generated/iso-8859_14-1998_map.cpp
    src/generated/iso_8859_5_map.cpp
    src/generated/hpux-cp1254-11.11_map.cpp
    src/generated/ibm-1374_p100_p100-2005_ms_map.cpp
    src/generated/ibm851_map.cpp
    src/generated/ksc5601.1987_0_map.cpp
    src/generated/ibm256_map.cpp
    src/generated/hpux-eucjp0201-11.11_map.cpp
    src/generated/ibm-5050_p12a-1999_map.cpp
    src/generated/java-cp863-1.3_p_map.cpp
    src/generated/ibm-963_p100-1995_map.cpp
    src/generated/ibm-833_p100-1995_map.cpp
    src/generated/ibm-1388_p110-2000_map.cpp
    src/generated/ibm-5470_p100_p100-2005_ms_map.cpp
    src/generated/ibm-21427_p100-1999_map.cpp
    src/generated/glibc-iso_8859_8-2.3.3_map.cpp
    src/generated/jisx0201.1976_0_map.cpp
    src/generated/hpux-cp850-11.11_map.cpp
    src/generated/ibm-5026_p120-1999_map.cpp
    src/generated/ibm420_map.cpp
    src/generated/macos-1286-10.2_map.cpp
    src/generated/ibm-5351_p100-1998_map.cpp
    src/generated/macos-1287-10.2_map.cpp
    src/generated/ibm-1277_p100-1995_map.cpp
    src/generated/ibm-869_p100-1995_map.cpp
    src/generated/java-cp1250-1.3_p_map.cpp
    src/generated/windows-20924-2000_map.cpp
    src/generated/java-cp943-1.2.2_map.cpp
    src/generated/ibm-5346_p100-1998_map.cpp
    src/generated/cp1251_map.cpp
    src/generated/glibc-ibm870-2.3.3_map.cpp
    src/generated/ibm-9449_p100-2002_map.cpp
    src/generated/ibm-1137_p100-1999_map.cpp
    src/generated/ibm-4954_p101-2000_map.cpp
    src/generated/glibc-ibm864-2.3.3_map.cpp
    src/generated/glibc-ibm922-2.3.3_map.cpp
    src/generated/ibm-1012_p100-1995_map.cpp
    src/generated/java-iso8859_1-1.3_p_map.cpp
    src/generated/ibm-1114_p100-2001_map.cpp
    src/generated/ibm-1370_x100-1999_map.cpp
    src/generated/hpux-hkbig5-11.11_map.cpp
    src/generated/ibm_1124_map.cpp
    src/generated/ibm-1283_p100-1996_map.cpp
    src/generated/windows-860-2000_map.cpp
    src/generated/8859_8_map.cpp
    src/generated/windows-861-2000_map.cpp
    src/generated/cp869_map.cpp
    src/generated/hpux-roc15-11.11_map.cpp
    src/generated/glibc-iso_ir_209-2.3.3_map.cpp
    src/generated/ibm-5035_p120-1999_map.cpp
    src/generated/hpux-cp1147-11.11_map.cpp
    src/generated/ebcdic_es_map.cpp
    src/generated/ibm-5123_p100-1999_map.cpp
    src/generated/ibm-259_x100-1995_map.cpp
    src/generated/ibm-1132_p100-1997_map.cpp
    src/generated/ibm-9145_x110-1997_map.cpp
    src/generated/ibm-1023_p100-2003_map.cpp
    src/generated/ibm-1125_p100-1997_map.cpp
    src/generated/windows-20880-2000_map.cpp
    src/generated/koi_8_map.cpp
    src/generated/ibm-4933_p100-2002_map.cpp
    src/generated/hpux-cp865-11.11_map.cpp
    src/generated/windows-20004-2000_map.cpp
    src/generated/windows-20005-2000_map.cpp
    src/generated/baltic_map.cpp
    src/generated/ibm-13124_p10a-1995_map.cpp
    src/generated/ibm-16684_p110-2003_map.cpp
    src/generated/iso_8859_8_map.cpp
    src/generated/ibm-904_p100-1995_map.cpp
    src/generated/ibm-949_x110-1999_map.cpp
    src/generated/macos-35-10.2_map.cpp
    src/generated/ibm-1016_p100-1995_map.cpp
    src/generated/macos-34-10.2_map.cpp
    src/generated/macos-2562-10.2_map.cpp
    src/generated/windows-21866-2000_map.cpp
    src/generated/macos-2563-10.2_map.cpp
    src/generated/ibm-1362_p110-1999_map.cpp
    src/generated/ibm905_map.cpp
    src/generated/ibm-918_x100-1995_map.cpp
    src/generated/ibm-930_p120-1999_map.cpp
    src/generated/windows-437-2000_map.cpp
    src/generated/ibm-4899_p100-1998_map.cpp
    src/generated/iso_5427_ext_map.cpp
    src/generated/windows-1047-2000_map.cpp
    src/generated/java-cp937-1.3_p_map.cpp
    src/generated/ibm-5352_p100-1998_map.cpp
    src/generated/ibm_856_map.cpp
    src/generated/ibm-9027_x100-1999_map.cpp
    src/generated/latin_greek_1_map.cpp
    src/generated/hpux-euctw-11.11_map.cpp
    src/generated/java-cp871-1.3_p_map.cpp
    src/generated/windows-1258_db-2013_map.cpp
    src/generated/ibm-13121_p100-1995_map.cpp
    src/generated/glibc-iso_6937-2.3.3_map.cpp
    src/generated/java-cp865-1.3_p_map.cpp
    src/generated/ibm-1382_x100-1995_map.cpp
    src/generated/ibm-1280_p100-1996_map.cpp
    src/generated/shift_jis_map.cpp
    src/generated/ibm-914_p100-1995_map.cpp
    src/generated/8859_9_map.cpp
    src/generated/glibc-ansi_x3.110-2.3.3_map.cpp
    src/generated/windows-10017-2000_map.cpp
    src/generated/ibm-1006_p100-1995_map.cpp
    src/generated/windows-1361-2000_map.cpp
    src/generated/ibm-1167_p100-2002_map.cpp
    src/generated/ibm-932_p12a-1999_map.cpp
    src/generated/windows-950_hkscs-2001_map.cpp
    src/generated/hpux-cp1252-11.11_map.cpp
    src/generated/iso_8859_3_map.cpp
    src/generated/ibm-903_p100-1995_map.cpp
    src/generated/ibm-1011_p100-1995_map.cpp
    src/generated/cp857_map.cpp
    src/generated/ibm-808_p100-1999_map.cpp
    src/generated/ibm-54191_p100-2006_map.cpp
    src/generated/ibm-4957_p101-2000_map.cpp
    src/generated/macos-36_1-10.2_map.cpp
    src/generated/iso8859_4_map.cpp
    src/generated/ibm-1126_p100-1997_map.cpp
    src/generated/ibm-1020_p100-2003_map.cpp
    src/generated/glibc-johab-2.3.3_map.cpp
    src/generated/inis_cyrillic_map.cpp
    src/generated/ibm-964_x110-1999_map.cpp
    src/generated/greek_ccitt_map.cpp
    src/generated/ibm-1375_p100-2004_map.cpp
    src/generated/ibm-1131_p100-1997_map.cpp
    src/generated/ibm-1363_p11a-1999_map.cpp
    src/generated/windows-500-2000_map.cpp
    src/generated/ebcdic_fi_se_a_map.cpp
    src/generated/ibm-8612_x110-1995_map.cpp
    src/generated/glibc-msz_7795.3-2.3.3_map.cpp
    src/generated/iso_ir_197_map.cpp
    src/generated/cp862_map.cpp
    src/generated/windows-10029-2000_map.cpp
    src/generated/ibm-857_p100-1995_map.cpp
    src/generated/glibc-rk1048-2.3.3_map.cpp
    src/generated/ibm-1015_p100-1995_map.cpp
    src/generated/java-cp942c-1.3_p_map.cpp
    src/generated/glibc-ds_2089-2.3.3_map.cpp
    src/generated/java-euc_cn-1.3_p_map.cpp
    src/generated/ibm-256_p100-1995_map.cpp
    src/generated/windows-1257-2000_map.cpp
    src/generated/windows-21025-2000_map.cpp
    src/generated/glibc-pt-2.3.3_map.cpp
    src/generated/windows-1256-2000_map.cpp
    src/generated/ibm-5142_p100-1995_map.cpp
    src/generated/ibm-1284_p100-1996_map.cpp
    src/generated/glibc-ibm1164-2.3.3_map.cpp
    src/generated/jisx0208.1983_0_map.cpp
    src/generated/macos-29-10.2_map.cpp
    src/generated/ibm-4944_p101-2000_map.cpp
    src/generated/java-cp850-1.3_p_map.cpp
    src/generated/glibc-ibm1132-2.3.3_map.cpp
    src/generated/ibm-1153_p100-1999_map.cpp
    src/generated/ibm-1377_p100_p100-2006_u3_map.cpp
    src/generated/java-cp037-1.3_p_map.cpp
    src/generated/hpux-cp863-11.11_map.cpp
    src/generated/ibm-5048_p100-1995_map.cpp
    src/generated/ibm280_map.cpp
    src/generated/ibm-1104_p100-2003_map.cpp
    src/generated/ibm-9048_p100-1998_map.cpp
    src/generated/hpux-cp1141-11.11_map.cpp
    src/generated/macos-37_2-10.2_map.cpp
    src/generated/macos-37_3-10.2_map.cpp
    src/generated/ibm-1145_p100-1997_map.cpp
    src/generated/windows-28595-2000_map.cpp
    src/generated/windows-28594-2000_map.cpp
    src/generated/euc-tw-2014_map.cpp
    src/generated/ibm-293_x100-1995_map.cpp
    src/generated/glibc-armscii_8-2.3.3_map.cpp
    src/generated/solaris-zh_hk.hkscs-5.9_map.cpp
    src/generated/windows-20932-2000_map.cpp
    src/generated/zh_tw_cp937_map.cpp
    src/generated/ibm-1375_p100-2006_map.cpp
    src/generated/windows-20290-2000_map.cpp
    src/generated/csn_369103_map.cpp
    src/generated/java-cp868-1.3_p_map.cpp
    src/generated/ibm-5471_p100-2007_map.cpp
    src/generated/ibm-1386_p100-2001_map.cpp
    src/generated/ibm-942_p12a-1999_map.cpp
    src/generated/windows-936-2000_map.cpp
    src/generated/ibm-834_p100-1995_map.cpp
    src/generated/windows-1144-2000_map.cpp
    src/generated/ansi_x3.110_map.cpp
    src/generated/ibm-951_x100-1995_map.cpp
    src/generated/windows-1145-2000_map.cpp
    src/generated/glibc-sjis-2.3.3_map.cpp
    src/generated/ibm-13125_p100-1997_map.cpp
    src/generated/glibc-euc_jp_ms-2.3.3_map.cpp
    src/generated/ibm-852_p100-1999_map.cpp
    src/generated/ibm-902_p100-1999_map.cpp
    src/generated/ibm_udcjp_gr_map.cpp
    src/generated/iso8859_9_map.cpp
    src/generated/ibm-1385_p100-2005_map.cpp
    src/generated/ibm-274_p100-2000_map.cpp
    src/generated/ibm-1141_p100-1997_map.cpp
    src/generated/cp1257_map.cpp
    src/generated/ibm-1100_p100-2003_map.cpp
    src/generated/ibm-5471_p100-2006_map.cpp
    src/generated/ibm-1375_p100-2007_map.cpp
    src/generated/java-cp1256-1.3_p_map.cpp
    src/generated/ibm-1157_p100-1999_map.cpp
    src/generated/ibm-37_p100-1999_map.cpp
    src/generated/ibm_1252_map.cpp
    src/generated/glibc-sen_850200_c-2.3.3_map.cpp
    src/generated/ibm-941_p120-1996_map.cpp
    src/generated/java-ms949-1.3_p_map.cpp
    src/generated/ibm-1252_p100-2000_map.cpp
    src/generated/ibm-4930_p110-1999_map.cpp
    src/generated/jisx0208.1983_gr_map.cpp
    src/generated/cwi_map.cpp
    src/generated/java-iso8859_7-1.3_p_map.cpp
    src/generated/iso-8859_6-1999_map.cpp
    src/generated/ibm-4948_p100-1995_map.cpp
)

build_static_extension(${TARGET_NAME} ${EXTENSION_SOURCES} ${ALL_OBJECT_FILES})
build_loadable_extension(${TARGET_NAME} "${ALL_OBJECT_FILES}"
                         ${EXTENSION_SOURCES})

set_property(TARGET ${EXTENSION_NAME} PROPERTY CXX_STANDARD 17)
set_property(TARGET ${EXTENSION_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ${LOADABLE_EXTENSION_NAME} PROPERTY CXX_STANDARD 17)
set_property(TARGET ${LOADABLE_EXTENSION_NAME} PROPERTY CXX_STANDARD_REQUIRED
                                                        ON)

install(
  TARGETS ${EXTENSION_NAME}
  EXPORT "${DUCKDB_EXPORT_SET}"
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}"
  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}")
